--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=4348810a241a330d3d143d62d7c988ec8b2e6629
-- ARM: Optimize multi-CPU tlb flushing a little more 
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=87067a935a174cf5e0b336d338a0ab535ffe199d
-- ARM: prevent VM_GROWSDOWN mmaps extending below FIRST_USER_ADDRESS
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=9b61a4d1b2064dbd0c9e61754305ac852170509f
- merge changes from 21y
-- arch/arm/include/asm/io.h
-- arch/arm/mm/cache-l2x0.c
-- drivers/serial/tegra_hsuart.c
-- drivers/video/tegra/nvmap.c
-- kernel/power/suspend.c
-- kernel/groups.c
- optimizing buildflags, adapting kernel config to build with gcc 4.7.1
-- keep compiling with 4.6.1, wireless.ko seems not working with 4.7.1

TODO:
- make kernel modules work with gcc 4.7.1
-- or build modules with 4.6.1 ?
- cherrypicking from vadonka
-- https://github.com/vadonka/lge-kernel-kang/commit/6f334518cf4f42f45dd243ac29c0d7d1ed0a3da0
-- https://github.com/vadonka/lge-kernel-kang/commit/d8800bb869ab7f0ca2df165d8e000cdaee2f3765
-- https://github.com/vadonka/lge-kernel-kang/commit/de29f457c300a4e327bdfab5c3ac6df5b7f679fa
-- https://github.com/vadonka/lge-kernel-kang/commit/88f6071333255e0f778616dbe8acb22d74636ea2
- update Fake_shmoo OC code
-- don't forget to analyze & merge spica OTF code
- merge from Linux 3.3
-- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=442e70c0b3536e832547eed89629435462f4b515
-- ... and required/depending changes  

- minimize compiled size of kernel and modules
- update BCM4329 to latest version findable
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=blob_plain;f=drivers/net/wireless/bcmdhd/wl_iw.c;hb=6de21231e558a85d766e7d821a6542c5c1803aa8 ?
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git&a=search&h=refs%2Fheads%2Fandroid-tegra-nv-3.1&st=commit&s=bcm ?

- merge P999 21y changes

