@@ -577,7 +577,7 @@ static int swap_entry_free(struct swap_info_struct *p,
 	count = p->swap_map[offset];
 	/* free if no reference */
 	if (!count) {
-#if defined (CONFIG_RAMZSWAP)
+#if defined (CONFIG_NOTIFY_PAGE_FREE)
         struct gendisk *disk = p->bdev->bd_disk; 
 #endif
 		if (offset < p->lowest_bit)
@@ -588,7 +588,7 @@ static int swap_entry_free(struct swap_info_struct *p,
 			swap_list.next = p - swap_info;
 		nr_swap_pages++;
 		p->inuse_pages--;
-#if defined (CONFIG_RAMZSWAP)
+#if defined (CONFIG_NOTIFY_PAGE_FREE)
         if (disk->fops->swap_slot_free_notify)
            disk->fops->swap_slot_free_notify(p->bdev, offset);
 #endif
